Integration of IrisWeb :D

--- a/src/lang/de-DE.yml
+++ b/src/lang/de-DE.yml
@@ -476,7 +476,7 @@ andru_message: "Andru ist ein Mitarbeiter und Entwickler. \"Das Mädchen für al
 ether_message: "${client.iHorizon_Emojis.icon.Sparkles} Ether ist ein Mitarbeiter von iHorizon. Er ist fasziniert von Linux und Cybersicherheit, und er improvisiert selbst als Support-Helfer für den iHorizon-Bot."
 
 # /nayaweb
-nayaweb_message: "😼NayaWeb ist meine zweite Entwicklerin/Zuträgerin , NayaWeb x Kisakay ❤️"
+irisweb_message: "😼NayaWeb ist meine zweite Entwicklerin/Zuträgerin , NayaWeb x Kisakay ❤️"
 
 # /ping
 pong_message: "【:ballot_box_with_check:】__**Pong**__ : "
