--- a/src/lang/ru-RU.yml
+++ b/src/lang/ru-RU.yml
@@ -476,7 +476,7 @@ andru_message: "Andru - сотрудник и разработчик. \"Маст
 ether_message: "${client.iHorizon_Emojis.icon.Sparkles} Ether - автор проекта iHorizon. Он увлекается Linux и кибербезопасностью, а также импровизирует в качестве помощника для бота iHorizon."
 
 # /nayaweb
-nayaweb_message: "😼NayaWeb - мой второй разработчик/соавтор , NayaWeb и Kisakay ❤️"
+irisweb_message: "😼NayaWeb - мой второй разработчик/соавтор , NayaWeb и Kisakay ❤️"
 
 # /ping
 pong_message: "【:ballot_box_with_check:】__**Понг**__ : "
