--- a/src/lang/jp-JP.yml
+++ b/src/lang/jp-JP.yml
@@ -475,7 +475,7 @@ andru_message: "Andruはコラボレーターであり開発者です。\"何で
 # /ether
 ether_message: "${client.iHorizon_Emojis.icon.Sparkles} EtherはiHorizonのコントリビューターです。Linuxとサイバーセキュリティに魅了され、iHorizonボットのサポートヘルパーとして即興で活動している。"
 
-# /nayaweb
+# /Irisweb
 irisweb_message: "😼ナヤウェブは私の2番目の開発者/貢献者 , ナヤウェブ x キサケイ ❤️"
 
 # /ping
