--- a/src/lang/fr-ME.yml
+++ b/src/lang/fr-ME.yml
@@ -1248,7 +1248,7 @@ automod_block_spam_command_off: "${interaction.user}, tu as désactivé la règl
 
 # /guildconfig block too-new-account
 too_new_account_dont_specified_time_on_enable: "Vous n'avez pas spécifié de délai. Pour activer ce module, un âge minimum du compte est requis !"
-too_new_account_invalid_time_on_enable: "Le délai que vous avez entré n'est pas valide ! **Exemple de délai valide** : `3h ; 30m ; 4w ; 4y` -> 3 heures ; 30 minutes ; 4 semaines ; 4 ans"
+too_new_account_invalid_time_on_enable: "Le délai que vous avez entré n'est pas valide ! **Exemple de délai valide** : `3h ; 30m ; 2mo ; 4w ; 4y` -> 3 heures ; 30 minutes ; 2 mois ; 4 semaines ; 4 ans"
 too_new_account_logEmbed_title: "Module TooNewAccount"
 too_new_account_logEmbed_desc_on_enable: "${interaction.user} a activé le module TooNewAccount. Les comptes nécessitent désormais un âge minimum de ${beautifulTime} !"
 too_new_account_command_work_on_enable: "${interaction.user}, les nouveaux membres rejoignant **${interaction.guild?.name}** avec des comptes âgés de moins de `${beautifulTime}` seront désormais expulsés."
