--- a/src/lang/de-DE.yml
+++ b/src/lang/de-DE.yml
@@ -271,6 +271,8 @@ ticket_panel_add_form_modal_field2_label: "Fragen-Platzhalter"
 ticket_panel_preview_message: "Vorschau des Ticket-Panels"
 ticket_panel_option_change_category: "Wählen Sie eine Option, um die Kategorie zu ändern"
 ticket_panel_panel_10_label: "Kategorie für eine spezifische Option ändern"
+ticket_panel_channel_panel_embed_id: "Ticket-Kanal-Embed-ID"
+ticket_panel_panel_11_label: "Ticket-Kanal-Embed-Panel ändern"
 
 # /ticket rename
 ticket_rename_ok: "Ticket-Kanal wurde umbenannt!"
