--- a/src/lang/en-US.yml
+++ b/src/lang/en-US.yml
@@ -270,6 +270,8 @@ ticket_panel_add_form_modal_field2_label: "Question Placeholder"
 ticket_panel_preview_message: "Preview of the ticket panel"
 ticket_panel_option_change_category: "Select an option to change category"
 ticket_panel_panel_10_label: "Change category for one specific option"
+ticket_panel_channel_panel_embed_id: "Ticket Channel Embed ID"
+ticket_panel_panel_11_label: "Change ticket channel embed panel"
 
 # /ticket rename
 ticket_rename_ok: "Ticket channel has been renamed !"
