--- a/src/lang/es-ES.yml
+++ b/src/lang/es-ES.yml
@@ -271,6 +271,8 @@ ticket_panel_add_form_modal_field2_label: "Marcador de la Pregunta"
 ticket_panel_preview_message: "Vista previa del panel de tickets"
 ticket_panel_option_change_category: "Selecciona una opción para cambiar la categoría"
 ticket_panel_panel_10_label: "Cambiar categoría para una opción específica"
+ticket_panel_channel_panel_embed_id: "ID del embed del canal de tickets"
+ticket_panel_panel_11_label: "Cambiar panel de embed del canal de tickets"
 
 # /ticket rename
 ticket_rename_ok: "¡El canal del ticket ha sido renombrado!"
