--- a/src/lang/fr-ME.yml
+++ b/src/lang/fr-ME.yml
@@ -271,6 +271,8 @@ ticket_panel_add_form_modal_field2_label: "Texte indicatif de la Question"
 ticket_panel_preview_message: "Aperçu du panneau de tickets"
 ticket_panel_option_change_category: "Sélectionnez une option pour changer de catégorie"
 ticket_panel_panel_10_label: "Changer la catégorie pour une option spécifique"
+ticket_panel_channel_panel_embed_id: "ID d'intégration du canal de tickets"
+ticket_panel_panel_11_label: "Modifier le panneau d'intégration du canal de tickets"
 
 # /ticket rename
 ticket_rename_ok: "Le salon du ticket a été renommé !"
