--- a/src/lang/jp-JP.yml
+++ b/src/lang/jp-JP.yml
@@ -271,6 +271,8 @@ ticket_panel_add_form_modal_field2_label: "質問プレースホルダー"
 ticket_panel_preview_message: "チケットパネルのプレビュー"
 ticket_panel_option_change_category: "カテゴリを変更するオプションを選択してください"
 ticket_panel_panel_10_label: "特定のオプションのカテゴリを変更する"
+ticket_panel_channel_panel_embed_id: "チケットチャンネル埋め込みID"
+ticket_panel_panel_11_label: "チケットチャンネル埋め込みパネルを変更"
 
 # /ticket rename
 ticket_rename_ok: "チケットチャンネルの名前が変更されました！"
