--- a/src/lang/pt-PT.yml
+++ b/src/lang/pt-PT.yml
@@ -271,6 +271,8 @@ ticket_panel_add_form_modal_field2_label: "Marcador da Pergunta"
 ticket_panel_preview_message: "Pré-visualização do painel de tickets"
 ticket_panel_option_change_category: "Selecione uma opção para alterar a categoria"
 ticket_panel_panel_10_label: "Alterar categoria para uma opção específica"
+ticket_panel_channel_panel_embed_id: "ID de incorporação do canal de tickets"
+ticket_panel_panel_11_label: "Alterar painel de incorporação do canal de tickets"
 
 # /ticket rename
 ticket_rename_ok: "O canal do ticket foi renomeado!"
