--- a/src/lang/ru-RU.yml
+++ b/src/lang/ru-RU.yml
@@ -271,6 +271,8 @@ ticket_panel_add_form_modal_field2_label: "Заполнитель вопроса
 ticket_panel_preview_message: "Предварительный просмотр панели тикетов"
 ticket_panel_option_change_category: "Выберите вариант для изменения категории"
 ticket_panel_panel_10_label: "Изменить категорию для одной конкретной опции"
+ticket_panel_channel_panel_embed_id: "ID встраивания канала тикетов"
+ticket_panel_panel_11_label: "Изменить панель встраивания канала тикетов"
 
 # /ticket rename
 ticket_rename_ok: "Канал тикета был переименован!"
