--- a/src/lang/ar-EG.yml
+++ b/src/lang/ar-EG.yml
@@ -1309,6 +1309,13 @@ perm_rmv_role: "تم إزالة الدور"
 perm_rmv_usr: "تم إزالة المستخدم"
 perm_set_command_reset: "تم إعادة تعيين هذا الأمر"
 perm_set_no_modified: "لم يتم تعديل أي صلاحية"
+perm_command_delete_dont_exist: "الأمر المحدد ليس له أي صلاحيات مضبوطة."
+perm_command_delete_command_deleted: "تم حذف صلاحيات الأمر: `${commands}`"
+perm_command_delete_specify_command: "تحتاج إلى تحديد أمر لحذف صلاحياته."
+perm_command_delete_all_one: "تحتاج إلى تحديد خيار واحد لحذف صلاحية."
+perm_command_delete_all_one_option: "يمكنك تحديد خيار واحد فقط لحذف صلاحية."
+perm_command_delete_all_zero_change: "نوع الصلاحية الذي حددته لم يتم استخدامه في أي أمر."
+perm_command_delete_all_command_ok: "\nتم حذف **${changes.length}** صلاحية متداخلة من نوع `${type}` (${value}) من قاعدة البيانات بنجاح."
 
 # /perm roles
 perm_roles_created_role: "الأدوار اللي اتعملت: ${createdRoles.join(', ')}"
