--- a/src/lang/it-IT.yml
+++ b/src/lang/it-IT.yml
@@ -1307,6 +1307,13 @@ perm_rmv_role: "Ruolo rimosso"
 perm_rmv_usr: "Utente rimosso"
 perm_set_command_reset: "Questo comando è stato reimpostato"
 perm_set_no_modified: "Nessun permesso modificato"
+perm_command_delete_dont_exist: "Il comando specificato non ha alcun permesso impostato."
+perm_command_delete_command_deleted: "Permessi eliminati per il comando: `${commands}`"
+perm_command_delete_specify_command: "È necessario specificare un comando per eliminare i suoi permessi."
+perm_command_delete_all_one: "È necessario specificare un'opzione per eliminare un permesso."
+perm_command_delete_all_one_option: "È possibile specificare solo un'opzione per eliminare un permesso."
+perm_command_delete_all_zero_change: "Il tipo di permesso specificato non è stato utilizzato in alcun comando."
+perm_command_delete_all_command_ok: "\nEliminate con successo **${changes.length}** autorizzazioni annidate di tipo `${type}` (${value}) dal database."
 
 # /perm roles
 perm_roles_created_role: "I seguenti ruoli sono stati creati: ${createdRoles.join(', ')}"
