--- a/src/lang/ru-RU.yml
+++ b/src/lang/ru-RU.yml
@@ -1307,6 +1307,13 @@ perm_rmv_role: "Роль удалена"
 perm_rmv_usr: "Пользователь удален"
 perm_set_command_reset: "Эта команда была сброшена"
 perm_set_no_modified: "Разрешения не изменены"
+perm_command_delete_dont_exist: "Для указанной команды не установлены права доступа."
+perm_command_delete_command_deleted: "Удалены права доступа для команды: `${commands}`"
+perm_command_delete_specify_command: "Вам необходимо указать команду для удаления её прав доступа."
+perm_command_delete_all_one: "Вам необходимо указать один параметр для удаления права доступа."
+perm_command_delete_all_one_option: "Вы можете указать только один параметр для удаления права доступа."
+perm_command_delete_all_zero_change: "Указанный вами тип прав доступа не использовался ни в одной команде."
+perm_command_delete_all_command_ok: "\nУспешно удалено **${changes.length}** вложенных прав доступа типа `${type}` (${value}) из базы данных."
 
 # /perm roles
 perm_roles_created_role: "Созданы следующие роли: ${createdRoles.join(', ')}"
