--- a/src/lang/it-IT.yml
+++ b/src/lang/it-IT.yml
@@ -1319,6 +1319,7 @@ perm_command_delete_all_command_ok: "\nEliminate con successo **${changes.length
 perm_roles_created_role: "I seguenti ruoli sono stati creati: ${createdRoles.join(', ')}"
 perm_roles_already_upate: "Tutti i ruoli esistono già e sono aggiornati."
 perm_roles_error: "Si è verificato un errore durante la creazione o l'aggiornamento dei ruoli."
+perm_roles_not_owner: "Solo il proprietario del server può aggiungere ruoli di livello di autorizzazione."
 
 # /toggle-react
 toggle_react_command_work: "<@${interaction.member?.id}>, ora quando un membro invia un messaggio di benvenuto, il bot **{activeMsg}**"
