--- a/src/lang/de-DE.yml
+++ b/src/lang/de-DE.yml
@@ -1147,6 +1147,7 @@ setjoinmessage_modal_fields_hex_color: "Farbe www.color-hex.com"
 setjoinmessage_modal_fields_message: "Nachricht, die du möchtest"
 setjoinmessage_var_text_size: "Textgröße: "
 setjoinmessage_var_avatar_size: "Avatargröße: "
+setjoinmessage_change_image_invalid_url: "Ungültige Bild-URL. Bitte versuchen Sie es mit einem anderen Bildanbieter."
 
 # /setjoinroles
 setjoinroles_var_none: "Keine"
