--- a/src/lang/it-IT.yml
+++ b/src/lang/it-IT.yml
@@ -1147,6 +1147,7 @@ setjoinmessage_modal_fields_hex_color: "colore www.color-hex.com"
 setjoinmessage_modal_fields_message: "messaggio che vuoi"
 setjoinmessage_var_text_size: "Dimensione del Testo: "
 setjoinmessage_var_avatar_size: "Dimensione dell'Avatar: "
+setjoinmessage_change_image_invalid_url: "URL dell'immagine non valida. Prova con un altro fornitore di immagini."
 
 # /setjoinroles
 setjoinroles_var_none: "Nessuno"
