--- a/src/lang/jp-JP.yml
+++ b/src/lang/jp-JP.yml
@@ -1147,6 +1147,7 @@ setjoinmessage_modal_fields_hex_color: "色 www.color-hex.com"
 setjoinmessage_modal_fields_message: "希望するメッセージ"
 setjoinmessage_var_text_size: "テキストサイズ: "
 setjoinmessage_var_avatar_size: "アバターサイズ: "
+setjoinmessage_change_image_invalid_url: "無効な画像URLです。別の画像プロバイダーで試してください。"
 
 # /setjoinroles
 setjoinroles_var_none: "なし"
