--- a/src/lang/pt-PT.yml
+++ b/src/lang/pt-PT.yml
@@ -1147,6 +1147,7 @@ setjoinmessage_modal_fields_hex_color: "cor www.color-hex.com"
 setjoinmessage_modal_fields_message: "mensagem que você deseja"
 setjoinmessage_var_text_size: "Tamanho do Texto: "
 setjoinmessage_var_avatar_size: "Tamanho do Avatar: "
+setjoinmessage_change_image_invalid_url: "URL da imagem inválido. Tente com outro provedor de imagens."
 
 # /setjoinroles
 setjoinroles_var_none: "Nenhum"
