--- a/src/lang/ar-EG.yml
+++ b/src/lang/ar-EG.yml
@@ -1508,7 +1508,7 @@ ban_dont_have_perm_myself: "${client.iHorizon_Emojis.icon.No_Logo} | ليس لد
 ban_try_to_ban_yourself: "${client.iHorizon_Emojis.icon.No_Logo} | لا يمكنك حظر نفسك!"
 ban_attempt_ban_higter_member: "${client.iHorizon_Emojis.icon.Stop_Logo} لا يمكنك حظر عضو لديه دور أعلى منك..."
 ban_cant_ban_member: "${client.iHorizon_Emojis.icon.No_Logo} | لا أستطيع حظر هذا العضو"
-ban_message_to_the_banned_member: "لقد تم حظرك من هذا الخادم: **${interaction.guild.name}** بواسطة `${interaction.member.user.username}`"
+ban_message_to_the_banned_member: "لقد تم حظرك من هذا الخادم: `${interaction.guild.name}` للسبب: **`${reason}`**"
 ban_command_work: "<@${member.user.id}> تم حظره بواسطة <@${interaction.member.id}>"
 ban_logs_embed_title: "سجلات الحظر"
 ban_logs_embed_description: "<@${member.user.id}> تم حظره بواسطة <@${interaction.member.id}>"
