--- a/src/lang/en-US.yml
+++ b/src/lang/en-US.yml
@@ -1510,7 +1510,7 @@ ban_dont_have_perm_myself: "${client.iHorizon_Emojis.icon.No_Logo} | I don't hav
 ban_try_to_ban_yourself: "${client.iHorizon_Emojis.icon.No_Logo} | You cannot ban yourself!"
 ban_attempt_ban_higter_member: "${client.iHorizon_Emojis.icon.Stop_Logo} You cannot ban user who have higher role than you..."
 ban_cant_ban_member: "${client.iHorizon_Emojis.icon.No_Logo} | I cannot ban that member"
-ban_message_to_the_banned_member: "You are banned from this server: **${interaction.guild.name}** by `${interaction.member.user.username}`"
+ban_message_to_the_banned_member: "You have been banned from this server: `${interaction.guild.name}` for the reason: **`${reason}`**"
 ban_command_work: "<@${member.user.id}> banned by <@${interaction.member.id}>"
 ban_logs_embed_title: "Ban Logs"
 ban_logs_embed_description: "<@${member.user.id}> banned by <@${interaction.member.id}>"
