--- a/src/lang/it-IT.yml
+++ b/src/lang/it-IT.yml
@@ -1508,7 +1508,7 @@ ban_dont_have_perm_myself: "${client.iHorizon_Emojis.icon.No_Logo} | Non ho il p
 ban_try_to_ban_yourself: "${client.iHorizon_Emojis.icon.No_Logo} | Non puoi bannare te stesso!"
 ban_attempt_ban_higter_member: "${client.iHorizon_Emojis.icon.Stop_Logo} Non puoi bannare un utente con un ruolo superiore al tuo..."
 ban_cant_ban_member: "${client.iHorizon_Emojis.icon.No_Logo} | Non posso bannare quel membro"
-ban_message_to_the_banned_member: "Sei stato bannato da questo server: ${interaction.guild.name} da ${interaction.member.user.username}"
+ban_message_to_the_banned_member: "Sei stato bannato da questo server: `${interaction.guild.name}` per il motivo: **`${reason}`**"
 ban_command_work: "<@${member.user.id}> bannato da <@${interaction.member.id}>"
 ban_logs_embed_title: "Log del Ban"
 ban_logs_embed_description: "<@${member.user.id}> bannato da <@${interaction.member.id}>"
