--- a/src/lang/en-US.yml
+++ b/src/lang/en-US.yml
@@ -1219,6 +1219,7 @@ setlogschannel_var_msg: "Messages Logs"
 setlogschannel_var_boost: "Boost Logs"
 setlogschannel_var_tickets: "Ticket Logs"
 setlogschannel_var_antispam: "AntiSpam Logs"
+setlogschannel_var_channel: "Channel Logs"
 
 # /join-ghostping add
 joinghostping_add_already_set: "The channel ${channel} is already set!"
